guestbook-ingress/guestbook-ui-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: guestbook-ui
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: guestbook-ui.poc.parvaeres.io
    http:
      paths:
      - path: /
        backend:
          serviceName: guestbook-ui
          servicePort: 80
